--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.13",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
     "vue": "^3.2.41",
     "vue3-carousel": "^0.2.5"
   },
